--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
-/* OLD PAGE STYLES*/
-/*
+/* Media Queries */
 @media screen and (min-width: 480px) {
   .container {
       background-color: darkslategrey;
@@ -30,49 +29,6 @@
   }
 }
 
-.backgroundPlus {
-  position: absolute;
-  top: 0px;
-  width:99%;
-  z-index: -1;
-  color:lightgrey;
-  background-color:#8491A3;
-  overflow: hidden;
-}
-
-body {
-  font-family: monospace;
-}
-
-body header {
-  text-align: center;
-}
-
-hr {
-  margin: 25px 0px;
-}
-
-table {
-  margin: 0px auto;
-}
-
-.center {
-  text-align: center;
-}
-
-.container {
-  border: 3px solid #93B48B;
-  margin: 10px auto;
-  padding: 15px;
-  width: 95%;
-}
-
-.desc {
-  color: tomato; 
-}
-*/
-
-
 
 /* OUT-OF-BOX STYLES */
 * {
@@ -82,6 +38,7 @@ table {
 }
 
 body {
+  font-family: monospace;
   margin: 0;
   padding: 0;
 }
