--- a/css/main.css
+++ b/css/main.css
@@ -1,248 +1,270 @@
 /* Media Queries */
+
 @media screen and (min-width: 480px) {
-  .container {
-      background-color: darkslategrey;
-  }
+    .container {
+        background-color: darkslategrey;
+    }
 }
 
 @media screen and (min-width: 640px) {
-  .container {
-      background-color: lightslategray;
-  }
+    .container {
+        background-color: lightslategray;
+    }
 }
 
 @media screen and (min-width: 768px) {
-  .container {
-      background-color: lightgray;
-  }
+    .container {
+        background-color: lightgray;
+    }
 }
 
 @media screen and (min-width: 1024px) {
-  .container {
-      background-color: lightskyblue;
-  }
+    .container {
+        background-color: lightskyblue;
+    }
 }
 
 @media screen and (min-width: 1200px) {
-  .container {
-      background-color: #BCEBCB;
-  }
+    .container {
+        background-color: #BCEBCB;
+    }
 }
 
 
 /* OUT-OF-BOX STYLES */
+
 * {
-  font-family: "Bai Jamjuree", sans-serif;
-  font-size: 18px;
-  line-height: 1.5;
+    font-family: "Bai Jamjuree", sans-serif;
+    font-size: 18px;
+    line-height: 1.5;
 }
 
 body {
-  font-family: monospace;
-  margin: 0;
-  padding: 0;
+    font-family: monospace;
+    margin: 0;
+    padding: 0;
 }
 
 body h1,
 body h3,
 body h4 {
-  color: #4c545d;
-  margin: 0;
+    color: #4c545d;
+    margin: 0;
 }
 
 body h1 {
-  font-size: 1.7rem;
+    font-size: 1.7rem;
 }
 
 body h3 {
-  font-size: 1.4rem;
+    font-size: 1.4rem;
 }
 
 body p,
 body a {
-  color: #9fabb2;
-  font-size: 0.9rem;
+    color: #9fabb2;
+    font-size: 0.9rem;
 }
 
 body a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 body .button-box {
-  text-align: center;
-  padding: 1.8rem 0;
+    text-align: center;
+    padding: 1.8rem 0;
 }
 
 body .button-box button {
-  border: none;
-  color: #fff;
-  height: 50px;
-  width: 300px;
-  border-radius: 40px;
-  font-size: 0.8rem;
-  font-weight: 600;
-  margin: 0.4rem 0.3rem;
+    border: none;
+    color: #fff;
+    height: 50px;
+    width: 300px;
+    border-radius: 40px;
+    font-size: 0.8rem;
+    font-weight: 600;
+    margin: 0.4rem 0.3rem;
 }
 
 body .button-box button.ios-button {
-  background-color: #26baa4;
-  border-bottom: 2.5px solid #27aa97;
-  -webkit-box-shadow: 0px 2px 20px rgba(39, 170, 151, 0.5);
-          box-shadow: 0px 2px 20px rgba(39, 170, 151, 0.5);
+    background-color: #26baa4;
+    border-bottom: 2.5px solid #27aa97;
+    -webkit-box-shadow: 0px 2px 20px rgba(39, 170, 151, 0.5);
+    box-shadow: 0px 2px 20px rgba(39, 170, 151, 0.5);
 }
 
 body .button-box button.mac-button {
-  background-color: #6173ff;
-  border-bottom: 2.5px solid #5766db;
-  -webkit-box-shadow: 0px 2px 20px rgba(87, 102, 219, 0.5);
-          box-shadow: 0px 2px 20px rgba(87, 102, 219, 0.5);
+    background-color: #6173ff;
+    border-bottom: 2.5px solid #5766db;
+    -webkit-box-shadow: 0px 2px 20px rgba(87, 102, 219, 0.5);
+    box-shadow: 0px 2px 20px rgba(87, 102, 219, 0.5);
 }
 
 footer {
-  display: none;
+    display: none;
 }
 
 section.footer .media {
-  background-color: #f2f2f2;
-  display: flex;
-  justify-items: center;
-}
-
-@media screen and (min-width: 1000px) {
-  header {
-    background-size: cover;
-    text-align: center;
-    padding-top: 5rem;
-  }
-  header img {
-    margin-bottom: 1rem;
-  }
-  header .banner .banner-paragraph {
-    max-width: 500px;
-    margin: auto;
-  }
-  section.feature {
-    text-align: center;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-    margin: 0 6rem;
-    padding: 40px 0;
-  }
-  section.feature img {
-    max-width: 600px;
-  }
-  section.feature .intro-text {
-    text-align: center;
-    max-width: 500px;
-    margin: auto;
-    margin-bottom: 3rem;
-  }
-  section.feature .track-snippets {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-    text-align: left;
-  }
-  section.feature .track-snippets .snippet-right {
-    margin: 0 4rem;
-  }
-  section.feature .track-snippets .snippet-right div {
-    margin-top: 3.5rem;
-  }
-  section.feature.supercharge-workflow .columns {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
-  }
-  section.feature.supercharge-workflow .columns .col {
-    padding: 1rem;
-  }
-  section.feature.supercharge-workflow .columns .col img {
-    height: 30px;
-  }
-  section.feature.partners {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: (1fr)[5];
-        grid-template-columns: repeat(5, 1fr);
-  }
-  .footer {
-    background-color: #f2f2f2;
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: (1fr)[5];
-        grid-template-columns: repeat(5, 1fr);
-  }
-  .footer div {
-    margin: auto;
-  }
-  .footer .logo img {
-    width: 50px;
-    height: auto;
-  }
-  .footer .short-links a {
-    text-decoration: none;
-    color: #4c545d;
-  }
-  .footer .media {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
-  }
-  .footer .media .social-media {
-    margin: 0 10px;
-  }
-  .footer .media .social-media img {
-    width: auto;
-    height: 20px;
-  }
-}
-
-@media screen and (max-width: 999px) {
-  header {
-    background-size: cover;
-    text-align: center;
-    padding: 40px;
-  }
-  header img {
-    padding: 80px 0;
-  }
-  section {
-    text-align: center;
-    padding: 40px;
-  }
-  section.feature .track-snippets img, section.feature.access-clipboard img {
-    width: 16rem;
-  }
-  section.feature.supercharge-workflow img {
-    width: 2rem;
-    margin: 20px;
-  }
-  section.feature.partners img {
-    margin: 20px;
-    width: 8rem;
-  }
-  section.footer .media {
     background-color: #f2f2f2;
     display: flex;
     justify-items: center;
-  }
-  section.footer .logo img {
-    width: 50px;
-  }
-  section.footer .media {
-    padding: 40px;
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: (1fr)[3];
+}
+
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 1%;
+    right: 1%;
+    z-index: 99;
+    font-size: 10px;
+    border: none;
+    outline: none;
+    background-color: #ffcc00;
+    color: black;
+    cursor: pointer;
+    padding: 8px 16px;
+}
+
+#myBtn:hover {
+    background-color: tomato;
+}
+
+@media screen and (min-width: 1000px) {
+    header {
+        background-size: cover;
+        text-align: center;
+        padding-top: 5rem;
+    }
+    header img {
+        margin-bottom: 1rem;
+    }
+    header .banner .banner-paragraph {
+        max-width: 500px;
+        margin: auto;
+    }
+    section.feature {
+        text-align: center;
+        -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+        justify-content: space-evenly;
+        margin: 0 6rem;
+        padding: 40px 0;
+    }
+    section.feature img {
+        max-width: 600px;
+    }
+    section.feature .intro-text {
+        text-align: center;
+        max-width: 500px;
+        margin: auto;
+        margin-bottom: 3rem;
+    }
+    section.feature .track-snippets {
+        display: -ms-grid;
+        display: grid;
+        -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+        text-align: left;
+    }
+    section.feature .track-snippets .snippet-right {
+        margin: 0 4rem;
+    }
+    section.feature .track-snippets .snippet-right div {
+        margin-top: 3.5rem;
+    }
+    section.feature.supercharge-workflow .columns {
+        display: -ms-grid;
+        display: grid;
+        -ms-grid-columns: (1fr)[3];
         grid-template-columns: repeat(3, 1fr);
-  }
-  section.footer .media img {
-    height: 25px;
-    color: #f2f2f2;
-  }
+    }
+    section.feature.supercharge-workflow .columns .col {
+        padding: 1rem;
+    }
+    section.feature.supercharge-workflow .columns .col img {
+        height: 30px;
+    }
+    section.feature.partners {
+        display: -ms-grid;
+        display: grid;
+        -ms-grid-columns: (1fr)[5];
+        grid-template-columns: repeat(5, 1fr);
+    }
+    .footer {
+        background-color: #f2f2f2;
+        display: -ms-grid;
+        display: grid;
+        -ms-grid-columns: (1fr)[5];
+        grid-template-columns: repeat(5, 1fr);
+    }
+    .footer div {
+        margin: auto;
+    }
+    .footer .logo img {
+        width: 50px;
+        height: auto;
+    }
+    .footer .short-links a {
+        text-decoration: none;
+        color: #4c545d;
+    }
+    .footer .media {
+        display: -ms-grid;
+        display: grid;
+        -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .footer .media .social-media {
+        margin: 0 10px;
+    }
+    .footer .media .social-media img {
+        width: auto;
+        height: 20px;
+    }
+}
+
+@media screen and (max-width: 999px) {
+    header {
+        background-size: cover;
+        text-align: center;
+        padding: 40px;
+    }
+    header img {
+        padding: 80px 0;
+    }
+    section {
+        text-align: center;
+        padding: 40px;
+    }
+    section.feature .track-snippets img,
+    section.feature.access-clipboard img {
+        width: 16rem;
+    }
+    section.feature.supercharge-workflow img {
+        width: 2rem;
+        margin: 20px;
+    }
+    section.feature.partners img {
+        margin: 20px;
+        width: 8rem;
+    }
+    section.footer .media {
+        background-color: #f2f2f2;
+        display: flex;
+        justify-items: center;
+    }
+    section.footer .logo img {
+        width: 50px;
+    }
+    section.footer .media {
+        padding: 40px;
+        display: -ms-grid;
+        display: grid;
+        -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    }
+    section.footer .media img {
+        height: 25px;
+        color: #f2f2f2;
+    }
 }
